Implemented security functionality, user entity, user management, JWT generation and authentication, added kafka. Also some small changes and upgrades.