@@ -1,20 +1,31 @@
 package com.thiscompany.ttrack.config;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
+import org.springframework.scheduling.annotation.EnableScheduling;
 
-import java.util.List;
+import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 
 @Configuration
 @ConfigurationProperties(prefix = "app")
+@EnableJpaAuditing
+@EnableScheduling
 public class AppConfig {
 
-    @Value("${app.version}")
+    @Value("${info.application.version}")
     private String version;
 
     @Bean
@@ -28,7 +39,32 @@ public class AppConfig {
         info.setContact(contact);
         info.setVersion(version);
 
-        return new OpenAPI().info(info).servers(List.of());
+        OpenAPI swagger = new OpenAPI();
+        swagger.setInfo(info);
+        swagger.servers(Collections.emptyList());
+        swagger.addSecurityItem(new SecurityRequirement().addList("Bearer Authentication"))
+                .components(new Components().addSecuritySchemes("Bearer Authentication", securityScheme()));
+        return swagger;
+    }
+
+    private SecurityScheme securityScheme() {
+        return new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT");
+    }
+
+    @Bean
+    public ObjectMapper objectMapper() {
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
+        objectMapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+        return objectMapper;
+    }
+
+    @Bean
+    public DateTimeFormatter dateTimeFormatter() {
+        return DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss.SSS");
     }
 
 }
